@@ -1,5 +1,5 @@
 Ganymede Release 0.99.5
-July ??, 1999
+July 28, 1999
 FAQ
 ---------------------------------------------
 
