@@ -1,5 +1,5 @@
-Ganymede Release 0.99.4
-July 8, 1999
+Ganymede Release 0.99.5
+July 28, 1999
 README
 ---------------------------------------------
 
@@ -51,13 +51,16 @@ Things you will need:
   JDK 1.2 on UNIX thus far only seems to support 8 and 24 bit color
   displays.
 
-  Swing 1.1 (or later) from Sun. You can download this
-  from http://java.sun.com/products/jfc/index.html.  Earlier versions
-  of Swing will NOT work, as Ganymede is now built to use the javax
-  version of the Swing libraries.  Probably the best thing to do
-  is to install the latest JDK 1.2 package, which includes an
-  up-to-date Swing.  Most of the client testing on the current release
-  has been performed with JDK 1.1.7 on Solaris and JDK 1.2 on Windows.
+  Swing 1.1 (or later) from Sun.  Swing 1.1.1 has *many* bugs fixed
+  relative to Swing 1.1, and should be used if at all possible. You
+  can download this from http://java.sun.com/products/jfc/index.html.  
+
+  Versions of Swing before Swing 1.1 will NOT work, as Ganymede is now
+  built to use the javax version of the Swing libraries.  Probably 
+  the best thing to do is to install the latest JDK 1.2 package, which
+  includes an up-to-date Swing.  Most of the client testing on the
+  current release has been performed with JDK 1.1.8 on Solaris and
+  JDK 1.2 on Windows.
 
   Lots of bugs in Swing and JDK have been fixed in JDK 1.2.2.. get it
   if you can.
