@@ -1,5 +1,5 @@
-Ganymede Developer Release 0.99.4
-July 8, 1999
+Ganymede Developer Release 0.99.5
+July 28, 1999
 THINGSTODO
 ---------------------------------------------
 
