@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede Release 0.99.2 - Customization 18 Jun 1999</title>
+    <title>Ganymede Release 0.99.5 - Customization 28 July 1999</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.2<br>Customization Overview 18 June 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.5<br>Customization Overview 28 July 1999</FONT></h1>
     <hr>
 
     <p>The Ganymede server has many advantages over the GASH project, including a graphical
