@@ -8,15 +8,15 @@
 
     <IMG SRC="ganymede_title.gif" HEIGHT=200 WIDTH=560 alt="Ganymede">
     <H1><FONT FACE="Arial,Helvetica">Ganymede Guide To Wizards</FONT></H1>
+
+    <p><blockquote>Do not meddle in the affairs of wizards, for they are subtle,
+      and quick to anger. -- J.R.R. Tolkein</blockquote></p>
     
     <table border="1" cellpadding="3" cellspacing="0" width="100%">
       <tr BGCOLOR="#CCFFCC">
 	<td colspan="1"><h2><b>Introduction</b></h2></td>
       </tr>
     </table>
-
-    <p><blockquote>Do not meddle in the affairs of wizards, for they are subtle,
-      and quick to anger. -- J.R.R. Tolkein</blockquote></p>
 
     <p>Ganymede is all about storing and manipulating data objects.
     When a user sits down to work with Ganymede, he issues commands to
@@ -830,7 +830,7 @@ public class userRenameWizard extends GanymediatorWizard {
 <!-- Created: Tue Jul 27 11:55:19 CDT 1999 -->
     <FONT FACE="Arial,Helvetica"><i>
 	<!-- hhmts start -->
-Last modified: Wed Jul 28 17:46:06 CDT 1999
+Last modified: Wed Jul 28 18:05:25 CDT 1999
 <!-- hhmts end -->
       </i></FONT>
   </body>
