@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede Release 0.99.4 - Documentation 8 July 1999</title>
+    <title>Ganymede Release 0.99.5 - Documentation 28 July 1999</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
   <body BGCOLOR="#FFFFFF">
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.4<br>Documentation 8 July 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.5<br>Documentation 28 July 1999</FONT></h1>
 
     <table border="1" cellpadding="3" cellspacing="0" width="100%">
       <tr BGCOLOR="#CCFFCC">
@@ -19,7 +19,7 @@
     <LI><a href="../README">README</a></LI>
     <LI><a href="../FAQ">FAQ</a></LI>
     <LI><a href="../CHANGES">CHANGE LOG</A></LI>
-    <LI><a href="../INSTALL">INSTALL</a> (<a href="install.html">HTML version</a>)</LI>
+    <LI><a href="install.html">Install Guide</a></LI>
     <LI><a href="../CREDITS">CREDITS</a></LI>
     <LI><a href="../THINGSTODO">THINGS TO DO</a></LI>
     </UL>
@@ -75,6 +75,7 @@
 
     <UL>
     <LI><A href="customization/index.html">A guide to DBEditObject subclassing</a></LI>
+    <LI><A href="customization/wizards.html">A guide to Wizards</a></LI>
     </UL>
 
     <table border="1" cellpadding="3" cellspacing="0" width="100%">
