@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede UNIX Installation Guide Release 0.99.4 - 8 July 1999</title>
+    <title>Ganymede UNIX Installation Guide Release 0.99.5 - 28 July 1999</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 0.99.4 - 8 July 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 0.99.5 - 28 July 1999</FONT></h1>
 <hr>
 
 <p>Installing Ganymede breaks down into five steps:</p>
@@ -252,7 +252,8 @@
     <p>We have provided two install scripts for installing the Ganymede
     clients on a UNIX system.  <a
     href="glossary.html#installClient">installClient</a> is for Java
-    1.1 and <a href="glossary.html#installClient2">installClient2</a>
+    1.1 and Swing 1.1 or greater (Swing 1.1.1 heavily recommended),
+    and <a href="glossary.html#installClient2">installClient2</a>
     is for Java 1.2.  Either script which will prompt you for the name
     of the machine that will be running your Ganymede server, and the
     directory which will contain the bin, html, and jars
@@ -499,7 +500,7 @@
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- Created: Thu May 27 16:58:48 CDT 1999 -->
     <!-- hhmts start -->
-Last modified: Thu Jul  8 23:50:06 CDT 1999
+Last modified: Wed Jul 28 18:03:58 CDT 1999
 <!-- hhmts end -->
   </body>
 </html>
