@@ -3,12 +3,12 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="GENERATOR" content="Mozilla/4.5 [en] (WinNT; I) [Netscape]">
-   <title>Ganymede Release 0.99.4 - Server Overview 8 July 1999</title>
+   <title>Ganymede Release 0.99.5 - Server Overview 28 July 1999</title>
 </head>
 <body bgcolor="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.4<br>Server Overview 8 July 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.5<br>Server Overview 28 July 1999</FONT></h1>
 
 <hr>
 
